--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+    <!-- <script src="/node_modules/quill-image-resize-module/image-resize.min.js"></script> -->
   </head>
   <body>
     <app-root></app-root>
